Enable frequent Joblogic FTP polling and schedule import status
